--- a/pages/home-scan/HomeScan.module.scss
+++ b/pages/home-scan/HomeScan.module.scss
@@ -12,11 +12,8 @@
         padding: 30px 130px;
     }
     padding: 25px 14px;
-    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
-                linear-gradient(101deg,#004fff, #cb06ed );
     background-origin: border-box;
     background-clip: content-box, border-box;
-    box-shadow: 2px 1000px 1px $black-blue inset;
     border-radius: 10px;
 }
 
